<resources>
    <string name="app_name">mycalculator</string>
      <string name="cal">0</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMin">-</string>
    <string name="buttonEq">=</string>
    <string name="buttonX">*</string>
    <string name="buttonSplit">/</string>
    <string name="buttonCe">CE</string>
    <string name="ImageView">c</string>
    <string name="action_settings">Settings</string>
</resources>
