<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="46dp" tools:context=".MainActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:id="@+id/tableLayout">
    <TableRow>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:id="@+id/textView"
            android:visibility="visible"
            />
    </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button1"
                android:id="@+id/button1"
                android:onClick=""
            />
            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button2"
                    android:id="@+id/button2"
                    android:onClick=""
                    />
            </TableRow>
            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button3"
                    android:id="@+id/button3"
                    android:onClick=""
                    />
            </TableRow>
            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonCe"
                    android:id="@+id/buttonCe"
                    android:onClick=""
                    />
            </TableRow>

        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button4"
                android:id="@+id/button4"
                android:onClick=""
                />
            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button5"
                    android:id="@+id/button5"
                    android:onClick=""
                    />

            </TableRow>
            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button6"
                    android:id="@+id/button6"
                    android:onClick=""
                    />
            </TableRow>
            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonPlus"
                    android:onClick=""
                    android:clickable="true"
                    android:id="@+id/buttonPlus"
                    />
            </TableRow>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button7"
                android:onClick=""
                android:id="@+id/button7"
                />
            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button8"
                    android:onClick=""
                    android:id="@+id/button8"
                    />
                </TableRow>
            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button9"
                    android:onClick=""
                    android:id="@+id/button9"
                    />
            </TableRow>
            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonMin"
                    android:onClick=""
                    android:clickable="true"
                    android:id="@+id/buttonMin"
                    />
            </TableRow>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonSplit"
                android:onClick=""
                android:clickable="true"
                android:id="@+id/buttonSplit"
                />
            <TableRow>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button0"
                    android:onClick=""
                    android:clickable="true"
                    android:id="@+id/button0"
                    />
            </TableRow>
            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonX"
                    android:onClick=""
                    android:clickable="true"
                    android:id="@+id/buttonX"
                    />
            </TableRow>
            <TableRow>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonEq"
                    android:onClick=""
                    android:clickable="true"
                    android:id="@+id/buttonEq"
                    />
            </TableRow>

        </TableRow>


    </TableLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="@string/ImageView"
        android:src="@drawable/dog"
        android:onClick="ImgChange"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="324dp" />


</RelativeLayout>
